--- a/responsivo.css
+++ b/responsivo.css
@@ -2,6 +2,41 @@
 
 
 @media screen and (max-width: 640px) {
+
+    .navbar {
+        background: linear-gradient(to bottom, #333, #2f4f4f, #4f6a6a, #6a8181, #2f4f4f, #333);
+        /* Outros estilos conforme necessário */
+    }
+
+    /* Estilos específicos para o menu toggle em telas menores */
+    .navbar-header {
+        float: none; /* Limpar a propriedade float */
+    }
+
+    .navbar-toggle {
+        display: block; /* Exibir o botão do menu toggle */
+    }
+
+    .navbar-menu {
+        display: none; /* Ocultar o menu */
+    }
+
+    .navbar-menu.active {
+        display: block; /* Exibir o menu quando o botão do menu toggle é clicado */
+    }
+
+    header {
+        background: linear-gradient(to bottom, #333, #2f4f4f, #4f6a6a, #6a8181, #2f4f4f, #333);
+    }
+
+    .nome-empresa {
+        background-color: rgba(0, 0, 0, 0.7); /* Adicionar fundo transparente */
+    }
+
+    .navbar-menu ul li {
+        margin-left: 0; /* Ajustar a margem do item do menu */
+    }
+    
     .container-conserto div {
         margin-left: auto;
         margin-right: auto;
@@ -72,7 +107,6 @@
 
  /* Estilos para telas grandes (largura maior ou igual a 1008px) */
 @media screen and (min-width: 1008px) {
-
     body {
         margin: 0; /* Remover a margem padrão do body */
     }
@@ -87,7 +121,7 @@
     }
 
     .nome-empresa {
-        font-size: 36px;
+        font-size: 24px;
         margin-top: 20px; /* Ajuste a margem superior conforme necessário */
     }
 
@@ -148,3 +182,4 @@
         font-size: 1.8em;
     }
 }
+
