--- a/style.css
+++ b/style.css
@@ -24,6 +24,12 @@ body {
     width: 100%;
     padding: 10px;
     background-color: var(--cor-extremidade);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    height: 60px;
+    /* Ajuste a altura conforme sua preferência */
 }
 
 .navbar-header {
@@ -88,29 +94,31 @@ body {
 }
 
 /*Header*/
-
 .header {
     height: 400px;
-    width: 100%px;
+    width: 100%;
     background-color: rgb(51, 51, 51);
     color: white;
     box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
-    background-size: cover;
+    background-size: 100%;
     background-attachment: fixed;
+    margin-top: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .header#header-img {
     background-image: url('imagens/maquinaHeader.webp');
     background-position: right center;
-    
 }
-
 
 .nome-empresa {
     font-size: 36px;
     color: #ffffff;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.267);
-    margin-bottom: 20px;
+    margin-top: 50px;
     padding: 10px 20px;
     border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.616);
@@ -128,14 +136,14 @@ body {
     }
 }
 
-/* 
-.header-image {
-    width: 100%;
-    height: auto;
-    max-width: 600px;
-    margin: 0 auto;
-    border-radius: 8px;
-} */
+main {
+    margin-top: 60px; /* Ajuste conforme a altura do navbar */
+    padding: 20px; /* Adiciona um espaçamento interno */
+    max-width: 1200px; /* Definindo uma largura máxima para centralizar */
+    margin-left: auto; /* Centraliza horizontalmente */
+    margin-right: auto; /* Centraliza horizontalmente */
+}
+
 
 /* Estilos da seção 'Sobre' */
 
@@ -154,10 +162,12 @@ body {
 /*Conaitner serviços*/
 
 .container {
-    margin: 0 auto;
-    overflow-x: hidden;
-    position: relative;
+    padding: 20px; /* Espaçamento interno */
+    background-color: rgba(255, 255, 255, 0.9); /* Fundo leve para contraste */
+    border-radius: 8px; /* Bordas arredondadas */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra para destaque */
 }
+
 
 .container-limpeza li,
 .serviços-container-vendas li {
