--- a/responsivo.css
+++ b/responsivo.css
@@ -3,64 +3,80 @@
 
 @media screen and (max-width: 640px) {
 
-    /* Estilos específicos para o menu toggle em telas menores */
     .navbar-header {
         float: none;
-        /* Limpar a propriedade float */
     }
 
     .navbar-toggle {
         display: block;
-        /* Exibir o botão do menu toggle */
     }
 
     .navbar-menu {
-        display: none;
-        /* Ocultar o menu */
-    }
+        flex-direction: column; 
+        width: 100%; 
+        background-color: var(--cor-extremidade); 
+        position: absolute;
+        top: 60px;
+        left: 0;   
+}
 
     .navbar-menu.active {
         display: block;
-        /* Exibir o menu quando o botão do menu toggle é clicado */
         font-size: 18px;
     }
 
-    header img {
-        width: 100%;
-        max-width: 600px;
-        margin: 20px auto;
+    .header#header-img {
+        background-position: right center;
+        background-repeat: no-repeat; 
+        background-size: contain; 
+        background-position: top; 
+        height: 150px; 
 
     }
 
-    .nome-empresa {
-        background-color: rgba(0, 0, 0, 0.7);
-        /* Adicionar fundo transparente */
-        font-size: 18px;
-        margin-left: 15px;
-        /* Adicione uma margem à esquerda */
-        margin-right: 15px;
-        /* Certifique-se de manter a margem à direita */
-
+    .header h1 {
+        font-size: 28px;
     }
 
-    .navbar-menu ul li {
-        margin-left: 0;
-        /* Ajustar a margem do item do menu */
+    .container {
+        padding: 10px; 
     }
 
-    .container-conserto div {
-        margin-left: auto;
-        margin-right: auto;
-        width: 80%;
-        float: none;
+    .imagem-higienizacao {
+        width: 80%; 
+        margin-left: 0; 
     }
 
-    .imagem-brastemp,
-    .imagem-microondas,
-    .imagem-lavaeseca {
-        float: none;
-        margin: 0 auto;
-        width: 100%;
+    .contato-container {
+        width: 90%; 
+        padding: 15px;
+    }
+
+    #contatoForm input[type="text"],
+    #contatoForm input[type="tel"],
+    #contatoForm input[type="email"],
+    #contatoForm textarea {
+        width: 100%; 
+        margin: 5px 0; 
+    }
+
+    #contatoForm button[type="submit"] {
+        width: 80%; 
+        padding: 12px; 
+        font-size: 16px; 
+    }
+
+    footer .icone {
+        width: 18px; 
+    }
+
+    #beneficios ul {
+        padding-left: 20px; 
+    }
+
+    #beneficios ul li {
+        padding-left: 10px;
+        font-size: 1rem; 
     }
 }
 
@@ -75,39 +91,27 @@
 
     .navbar-menu {
         display: flex;
-        /* Alterar para um layout flexível */
         justify-content: flex-end;
-        /* Alinhar os itens à direita */
     }
 
     .navbar-menu ul {
         display: flex;
-        /* Alterar para um layout flexível */
         list-style-type: none;
-        /* Remover os marcadores de lista */
     }
 
     .navbar-menu ul li {
         margin-left: 20px;
-        /* Adicionar margem entre os itens */
     }
 
     .navbar-toggle {
         display: none;
-        /* Ocultar o botão do menu hamburguer */
     }
 
-    /*
-    header img {
-        width: 80%;
-        max-width: 600px;
-        margin: 20px auto;
-    }*/
+   
 
     .nome-empresa {
         font-size: 24px;
         margin-top: 20px;
-        /* Ajuste a margem superior conforme necessário */
     }
 
     .container-conserto div {
@@ -139,28 +143,21 @@
 @media screen and (min-width: 1008px) {
     body {
         margin: 0;
-        /* Remover a margem padrão do body */
     }
 
     header {
         display: flex;
         flex-direction: column;
-        /* Alterar a direção do flex para coluna */
         align-items: center;
-        /* Centralizar os itens na direção da coluna */
         width: 100vw;
-        /* Definir largura total da tela */
         padding: 20px 0;
-        /* Adicionar padding superior e inferior */
     }
 
     .nome-empresa {
         font-size: 26px;
         margin-top: 20px;
         margin-left: 15px;
-        /* Adicione uma margem à esquerda */
         margin-right: 15px;
-        /* Certifique-se de manter a margem à direita */
     }
 
     header img {
@@ -171,11 +168,8 @@
 
     .navbar {
         width: 100vw;
-        /* Definir largura total da tela */
         padding: 20px 0;
-        /* Adicionar padding superior e inferior */
         margin: 0;
-        /* Remover margem */
     }
 
     .navbar-menu {
@@ -209,12 +203,8 @@
 
     #contato {
         width: 100vw;
-        /* Definir largura total da tela */
-
         padding: 20px 0;
-        /* Adicionar padding superior e inferior */
         margin: 0;
-        /* Remover margem */
     }
 
     /* Aumenta o tamanho das letras */
