--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@
     --cor-extremidade: #333;
 }
 
+/* Ajuste do scroll de rolagem */
+section {
+    scroll-margin-top: 70px; 
+}
+
 /* Estilos gerais */
 body {
     font-family: Arial, Helvetica, sans-serif;
@@ -44,26 +49,20 @@ body {
 }
 
 
-.navbar-toggler {
-    background-color: transparent;
+.menu-btn {
+    background-color: var(--cor-extremidade);
+    color: white;
     border: none;
+    padding: 15px 30px; 
+    font-size: 18px;    
     cursor: pointer;
-    display: none;
-}
-
-.navbar-toggle span {
-    background: var(--black-cor);
-    height: 3px;
-    width: 25px;
-    display: block;
-    margin: 5px auto;
-    transition: all 0.3s ease-in-out;
 }
 
 .navbar-menu {
     display: none;
     margin-right: 10px;
 }
+
 
 .navbar-menu ul {
     list-style-type: none;
@@ -154,12 +153,14 @@ main {
 
 .sobre-texto {
     line-height: 1.2;
+    font-size: 1.2rem;
 }
 
 .titulo {
     text-align: center;
     background-color: var(--cor-terciaria);
     color: var(--cor-texto);
+    border-radius: 4px;
     padding: 20px;
     margin-bottom: 20px;
 }
@@ -173,7 +174,7 @@ main {
 }
 
 .container-limpeza p {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     padding-left: 0;
     text-align: left;
 }
@@ -184,6 +185,7 @@ main {
 }
 
 .container-limpeza ul li {
+    font-size: 1.1rem;
     list-style: none;
     text-align: left;
     margin-bottom: 10px;/
@@ -192,19 +194,23 @@ main {
 .higienizacao {
     display: flex;
     align-items: center;
-    text-align: center;
-    padding: 20px;
-
+    justify-content: space-between;
 }
 
-.higienizacao p {
-    padding-left: 20px;
-    text-align: center;
+.higienizacao-container-paragrafo {
     flex: 1;
-    font-size: 20px;
-    background-color: var(--cor-terciaria);
+    width: 80%; 
+    padding: 20px;
+    border-radius: 4px;
     color: var(--cor-texto);
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    background-color: var(--cor-terciaria);
+    box-sizing: border-box;
+}
+
+.higienizacao-container-paragrafo p {
+    font-size: 1.2rem;
+    letter-spacing: 0.5px; 
+    line-height: 1.2;
 }
 
 .imagem-higienizacao {
@@ -222,6 +228,7 @@ main {
     font-size: 18px;
     text-align: justify;
     text-align: left;
+    border-radius: 4px;
 }
 
 .container-limpeza-profunda h3 {
@@ -232,8 +239,9 @@ main {
 }
 
 .limpeza-profunda-texto {
-    line-height: 1.3;
-    font-size: 18px;
+    line-height: 1.5;
+    font-size: 18px; 
+    letter-spacing: 0.5px; 
 }
 
 
@@ -250,6 +258,7 @@ main {
     background-color: var(--cor-subtitulo);
     color: var(--cor-texto);
     text-align: center;
+    border-radius: 4px;
 }
 
 .servicos-subtitulo {
@@ -309,6 +318,10 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.container-maquina-content p {
+    margin-bottom: 10px;
 }
 
 .container-maquina p {
@@ -398,6 +411,7 @@ h3 {
     background-color: var(--cor-terciaria);
     color: var(--cor-texto);
     margin-top: 80px;
+    border-radius: 4px;
 }
 
 #beneficios h2 {
@@ -413,7 +427,7 @@ h3 {
 #beneficios ul li {
     margin-bottom: 10px;
     padding-left: 20px;
-
+font-size: 1.1rem;
 }
 
 #beneficios .beneficios-texto {
@@ -430,7 +444,6 @@ h3 {
 .serviços-container-vendas {
     width: 100%;
     padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: 0 auto;
     font-family: Arial, sans-serif;
 }
@@ -475,14 +488,16 @@ h3 {
     transition: background-color 0.5s ease;
     margin: 0;
     position: relative;
+    border-radius: 4px;
 }
 
 .contato-container {
     background-color: var(--cor-terciaria);
     width: 50%;
-    max-width: 600px;
+    max-width: 500px;
     margin: 0 auto;
     padding: 20px;
+    border-radius: 4px;
 }
 
 #titulo {
@@ -583,8 +598,9 @@ footer a {
 }
 
 footer .icone {
-    width: 20px;
-    height: 20px;
-    margin-right: 10px;
+    width: 15px;
+    height: auto;
+    margin-right: 8px;
     vertical-align: middle;
 }
+
