--- a/style.css
+++ b/style.css
@@ -154,6 +154,8 @@ main {
 .sobre-texto {
     line-height: 1.2;
     font-size: 1.2rem;
+    line-height: 1.3; 
+
 }
 
 .titulo {
@@ -171,6 +173,8 @@ main {
     margin: 0 auto;
     overflow-x: hidden;
     position: relative;
+    margin-top: 20px;
+    
 }
 
 .container-limpeza p {
